--- a/myapp/.env
+++ b/myapp/.env
@@ -1,3 +1,5 @@
 NODE_ENV=development
 PORT=3000
 JWT_SECRET=asdfghjkhgsdfghjkjhgbnbv@ggbjbtfg345678964@fghjb#$%^&*
+EMAIL=testingpurposes240@gmail.com
+PASSWORD=ooov tnsn nidi vkyf
