env variables set

--- a/myapp/.env
+++ b/myapp/.env
@@ -2,4 +2,4 @@ NODE_ENV=development
 PORT=3000
 JWT_SECRET=asdfghjkhgsdfghjkjhgbnbv@ggbjbtfg345678964@fghjb#$%^&*
 EMAIL=testingpurposes240@gmail.com
-PASSWORD=ooov tnsn nidi vkyf
+PASSWORD=bryk qwyx xuer etmj
