--- a/myapp/package.json
+++ b/myapp/package.json
@@ -7,6 +7,7 @@
     "build": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/style.css --watch"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
